# LupinPathTracer

./: .gitignore  Cargo.toml  README.md  os_generic.h  os_window.cpp  project.sublime-project  project.sublime-workspace  todo.txt
assets/: gazerbo.mtl  raytracer.wgsl
lupin/: Cargo.toml  build.rs
lupin/src/: base.rs  data_structures.rs  denoising.rs  lib.rs  renderer.rs  tonemapping.rs  wgpu_utils.rs
lupin/src/renderer/: renderer_wgpu.rs
lupin/src/renderer/renderer_wgpu/: shaders.rs
lupin/src/renderer/renderer_wgpu/shaders/: pathtracer.wgsl
lupin/src/shaders/: bvh_custom.wgsl  bvh_rt.wgsl  pathtracer.wgsl  show_texture.wgsl  tonemapping.wgsl
lupin/src/tools/: check_shaders.rs
lupin_benchmarks/: Cargo.toml
lupin_benchmarks/src/: bvh_build_benchmark.rs  bvh_traversal_benchmark.rs
lupin_editor/: Cargo.toml
lupin_editor/src/: base.rs  input.rs  loader.rs  main.rs
lupin_examples/: Cargo.toml
lupin_examples/src/: example1.rs
lupin_loader/: Cargo.toml  README.md
lupin_loader/src/: lib.rs  loader.rs  main.rs
lupin_tests/: Cargo.toml
lupin_tests/src/: main.rs
lupin_tests/src/shaders/: compare_textures.wgsl
lupin_viewer/: Cargo.toml
lupin_viewer/egui-wgpu/: Cargo.toml
lupin_viewer/egui-wgpu/src/: lib.rs
lupin_viewer/src/: input.rs  loader.rs  main.rs  ui.rs
src/: base.rs  bvh_profiler.rs  core.rs  editor.rs  lib.rs  loader.rs  main.rs  platform.rs  renderer.rs  renderer_wgpu.rs  sublime_project.sublime-workspace  wgsl_preprocessor.rs  winit_input.rs
src/platform/: platform_windows.rs
src/renderer/: renderer_wgpu.rs
src/renderer/renderer_wgpu/: shaders.rs  wgsl_preprocessor.rs
src/renderer/renderer_wgpu/shaders/: base.wgsl  pathtracer.wgsl  show_texture.wgsl
src/shaders/: base.wgsl  bvh_traversal.wgsl  pathtracer.wgsl  texture2screen.wgsl
test_scenes/: .gitignore
test_scenes/arealights1/: render_cam1.hdr  render_cam2.hdr
test_scenes/environments1/: render_cam1.hdr  render_cam2.hdr
test_scenes/environments2/: render_cam1.hdr  render_cam2.hdr
test_scenes/features1/: render_cam1.hdr  render_cam2.hdr
test_scenes/furnace1/: render_cam0.hdr
test_scenes/instances1/: render_cam1.hdr  render_cam2.hdr
test_scenes/materials1/: render_cam1.hdr  render_cam2.hdr
test_scenes/materials2/: render_cam1.hdr  render_cam2.hdr
test_scenes/materials3/: render_cam1.hdr  render_cam2.hdr
test_scenes/materials4/: render_cam1.hdr  render_cam2.hdr
test_scenes/materials5/: render_cam1.hdr  render_cam2.hdr
test_scenes/shapes1/: render_cam1.hdr  render_cam2.hdr
