[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit  = "0.29.15"
wgpu   = "0.19.4"
egui   = "0.26.0"
egui_wgpu_backend = "0.28.0"
egui_winit_platform = "0.21.0"
egui_demo_lib = "0.26"