[package]
name = "lupin_pathtracer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Platforms
windows-sys = { version = "0.52.0", features = ["Win32_Foundation",
                                                "Win32_System_Threading",
                                                "Win32_Graphics_Gdi",
                                                "Win32_System_LibraryLoader",
                                                "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6.2"

# GUI
winit = "0.29.7"
wgpu  = "0.19.4"
egui  = "0.27.2"
egui-wgpu  = "0.27.2"
egui-winit = "0.27.2"

# Loading
tobj = "4.0.2"
