
[package]
name = "lupin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check_shaders"
path = "src/tools/check_shaders.rs"

[dependencies]
wgpu = "27.0.1"
half = "2.6.0"
rand = "0.8"
oidn = { version = "2.3.3", optional = true }
#oidn-wgpu-interop = { version = "0.3.0", optional = true }
#oidn-wgpu-interop = { path = "../../oidn-wgpu-interop", optional = true }
# Need latest pull request so that it works on my PC.
oidn-wgpu-interop = { git = "https://github.com/Vecvec/oidn-wgpu-interop", optional = true }

[features]
denoising = ["dep:oidn", "dep:oidn-wgpu-interop"]
denoise-force-disable-shared-device = []
force-swrt = []
