
[package]
name = "lupin_pt"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = [ "pathtracing", "photorealistic", "rendering", "WGPU" ]
categories = [ "graphics", "rendering" ]
description = "A WGPU Path Tracing Library"
repository = "https://github.com/LeonardoTemperanza/LupinPathtracer"
readme = "../README.md"

[[bin]]
name = "check_shaders"
path = "src/tools/check_shaders.rs"

[dependencies]
wgpu = "28.0.0"
half = "2.6.0"
rand = "0.8"
oidn = { version = "2.3.3", optional = true }
oidn-wgpu-interop = { version = "0.4.0", optional = true }

[features]
denoising = ["dep:oidn", "dep:oidn-wgpu-interop"]
denoise-force-disable-shared-device = []
force-swrt = []
