[package]
name = "lupin_benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name  = "bvh_build_benchmark"
test  = false
bench = true
path  = "src/bvh_build_benchmark.rs"

[[bin]]
name  = "bvh_traversal_benchmark"
test  = false
bench = true
path  = "src/bvh_traversal_benchmark.rs"

[dependencies]
lupin = { path = "../lupin" }

winit = "0.29.7"
plotters = "0.3.6"
