[package]
name = "lupin_loader"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = [ "scene", "serialization", "WGPU" ]
categories = [ "graphics", "rendering::data-formats" ]
description = "A simple scene loader for lupin_pt"
repository = "https://github.com/LeonardoTemperanza/LupinPathtracer"
readme = "README.md"

[dependencies]
lupin_pt = "0.1.0"

# Serialization
tobj  = "4.0.2"
image = "0.25.0"
half = "2.3"
