[package]
name = "egui-wgpu"
edition = "2021"
#version.workspace = true
description = "Bindings for using egui natively using the wgpu library"
authors = [
  "Nils Hasenbanck <nils@hasenbanck.de>",
  "embotech <opensource@embotech.com>",
  "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
]
#edition.workspace = true
#rust-version.workspace = true
homepage = "https://github.com/emilk/egui/tree/main/crates/egui-wgpu"
#license.workspace = true
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/main/crates/egui-wgpu"
categories = ["gui", "game-development"]
keywords = ["wgpu", "egui", "gui", "gamedev"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "**/*.wgsl", "Cargo.toml"]

#[lints]
#workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = ["fragile-send-sync-non-atomic-wasm", "macos-window-resize-jitter-fix", "wgpu/default"]

## Enables the `capture` module for capturing screenshots.
capture = ["dep:egui"]

## Enable [`winit`](https://docs.rs/winit) integration. On Linux, requires either `wayland` or `x11`
winit = ["dep:winit", "winit/rwh_06", "dep:egui", "capture"]

## Enables Wayland support for winit.
wayland = ["winit?/wayland"]

## Enables x11 support for winit.
x11 = ["winit?/x11"]

## Make the renderer `Sync` on wasm, exploiting that by default wasm isn't multithreaded.
## It may make code easier, especially when targeting both native and web.
## On native most wgpu objects are send and sync, on the web they are not (by nature of the WebGPU specification).
## This is not supported in [multithreaded WASM](https://gpuweb.github.io/gpuweb/explainer/#multithreading-transfer).
## Thus that usage is guarded against with compiler errors in wgpu.
fragile-send-sync-non-atomic-wasm = ["wgpu/fragile-send-sync-non-atomic-wasm"]

## Enables `present_with_transaction` surface flag temporary during window resize on MacOS.
macos-window-resize-jitter-fix = ["wgpu/metal"]

[dependencies]
epaint = { version = "0.33.3", default-features = false, features = ["bytemuck"] }
ahash = { version = "0.8.12", default-features = false, features = [
  "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
  "std",
] }
bytemuck = "1.24.0"
document-features = "0.2.11"
log = { version = "0.4.28", features = ["std"] }
profiling = { version = "1.0.17", default-features = false }
thiserror = "2.0.17"
type-map = "0.5.1"
web-time = "1.1.0" # Timekeeping for native and web
wgpu = { version = "28.0.0", features = ["wgsl"] }

# Optional dependencies:

egui = { version = "0.33.0", optional = true, default-features = false }
winit = { version = "0.30.7", optional = true, default-features = false }
